--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       "https://www.youtube.com/channel/UCka378q9pGei337HfwEwinA"
     ],
     "jobTitle": ["Author", "Commentator"],
-    "worksFor": "Samiksha’s State of the Debate"
+    "worksFor": "Samiksha's State of the Debate"
   }
   </script>
 </head>
