--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     <div class="header-inner">
       <div class="logo">
         <!-- Replace images/logo.png with your actual logo path -->
-        <img src="images/logo.png" alt="Samiksha's State of the Debate logo">
+        <img src="images/1cc23b9b-7859-410a-ba13-cde86f790386_1400x1400.webp" alt="Samiksha's State of the Debate logo">
       </div>
       <div class="header-text">
         <div class="tagline">Culture · Economics · Politics · The Truth</div>
@@ -381,7 +381,7 @@
             <div class="card-tag">Book</div>
             <div class="card-title">Legal Crime</div>
             <!-- Replace images/legal-crime.jpg with your actual cover path -->
-            <img src="images/legal-crime.jpg" alt="Legal Crime by Samiksha Bhattacharjee" style="width:100%; border-radius:6px; margin:0.5rem 0;">
+            <img src="images/legal-crime.png" alt="Legal Crime by Samiksha Bhattacharjee" style="width:100%; border-radius:6px; margin:0.5rem 0;">
             <p class="card-meta">
               A gripping YA thriller about identity, peer pressure, and the cost of reinvention.
             </p>
