--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
           </div>
           <div class="hero-image">
             <!-- Replace images/author.jpg with your actual author photo path -->
-            <img src="images/author.jpg" alt="Samiksha Bhattacharjee">
+            <img src="images/pfp youtube.jpg" alt="Samiksha Bhattacharjee">
           </div>
         </div>
       </div>
