--- a/index.html
+++ b/index.html
@@ -462,8 +462,9 @@
       </div>
     </section>
 
-  <!-- Trailer -->
+ <!-- Trailer -->
 <article class="card">
+  <img class="card-thumb" src="https://img.youtube.com/vi/lDloRGrROew/hqdefault.jpg">
   <div class="card-tag">Trailer</div>
   <div class="card-title">We’re the Rebuttal. Introducing the State of the Debate.</div>
   <div class="card-footer">
@@ -473,7 +474,8 @@
 
 <!-- Episode 1 -->
 <article class="card">
-  <div class="card-tag">Episode 9</div>
+  <img class="card-thumb" src="https://img.youtube.com/vi/0odEiOttThA/hqdefault.jpg">
+  <div class="card-tag">Episode 1</div>
   <div class="card-title">How to Survive Adulthood in 2026: AI and Fertility Killed the Dream</div>
   <div class="card-footer">
     <a href="https://www.youtube.com/watch?v=0odEiOttThA&list=PLdUYBT5_iJexrOtx5JIpqc_ZKkOWZ2CnM&index=9" target="_blank">Watch →</a>
@@ -482,7 +484,8 @@
 
 <!-- Episode 2 -->
 <article class="card">
-  <div class="card-tag">Episode 8</div>
+  <img class="card-thumb" src="https://img.youtube.com/vi/V2ZvO7ZpGI0/hqdefault.jpg">
+  <div class="card-tag">Episode 2</div>
   <div class="card-title">Why Gen Z NEVER Recovered from 2020.</div>
   <div class="card-footer">
     <a href="https://www.youtube.com/watch?v=V2ZvO7ZpGI0&list=PLdUYBT5_iJexrOtx5JIpqc_ZKkOWZ2CnM&index=8" target="_blank">Watch →</a>
@@ -491,7 +494,8 @@
 
 <!-- Episode 3 -->
 <article class="card">
-  <div class="card-tag">Episode 7</div>
+  <img class="card-thumb" src="https://img.youtube.com/vi/V2ZvO7ZpGI0/hqdefault.jpg">
+  <div class="card-tag">Episode 3</div>
   <div class="card-title">The TRUTH About Body Positivity: Mocking Men, Normalising Obesity</div>
   <div class="card-footer">
     <a href="https://www.youtube.com/watch?v=V2ZvO7ZpGI0&list=PLdUYBT5_iJexrOtx5JIpqc_ZKkOWZ2CnM&index=7" target="_blank">Watch →</a>
@@ -500,7 +504,8 @@
 
 <!-- Episode 4 -->
 <article class="card">
-  <div class="card-tag">Episode 6</div>
+  <img class="card-thumb" src="https://img.youtube.com/vi/V2ZvO7ZpGI0/hqdefault.jpg">
+  <div class="card-tag">Episode 4</div>
   <div class="card-title">History Warned Us About Free Speech Dying - We Ignored It</div>
   <div class="card-footer">
     <a href="https://www.youtube.com/watch?v=V2ZvO7ZpGI0&list=PLdUYBT5_iJexrOtx5JIpqc_ZKkOWZ2CnM&index=6" target="_blank">Watch →</a>
@@ -509,6 +514,7 @@
 
 <!-- Episode 5 -->
 <article class="card">
+  <img class="card-thumb" src="https://img.youtube.com/vi/V2ZvO7ZpGI0/hqdefault.jpg">
   <div class="card-tag">Episode 5</div>
   <div class="card-title">The Gender Pay Gap Isn’t What You Think (And Socialism Won’t Fix It)</div>
   <div class="card-footer">
@@ -518,7 +524,8 @@
 
 <!-- Episode 6 -->
 <article class="card">
-  <div class="card-tag">Episode 4</div>
+  <img class="card-thumb" src="https://img.youtube.com/vi/V2ZvO7ZpGI0/hqdefault.jpg">
+  <div class="card-tag">Episode 6</div>
   <div class="card-title">Fertility, Feminism and The (Population) Fall</div>
   <div class="card-footer">
     <a href="https://www.youtube.com/watch?v=V2ZvO7ZpGI0&list=PLdUYBT5_iJexrOtx5JIpqc_ZKkOWZ2CnM&index=4" target="_blank">Watch →</a>
@@ -527,7 +534,8 @@
 
 <!-- Episode 7 -->
 <article class="card">
-  <div class="card-tag">Episode 3</div>
+  <img class="card-thumb" src="https://img.youtube.com/vi/V2ZvO7ZpGI0/hqdefault.jpg">
+  <div class="card-tag">Episode 7</div>
   <div class="card-title">Liberal vs Conservative? You're Both Wrong</div>
   <div class="card-footer">
     <a href="https://www.youtube.com/watch?v=V2ZvO7ZpGI0&list=PLdUYBT5_iJexrOtx5JIpqc_ZKkOWZ2CnM&index=3" target="_blank">Watch →</a>
@@ -536,7 +544,8 @@
 
 <!-- Episode 8 -->
 <article class="card">
-  <div class="card-tag">Episode 2</div>
+  <img class="card-thumb" src="https://img.youtube.com/vi/V2ZvO7ZpGI0/hqdefault.jpg">
+  <div class="card-tag">Episode 8</div>
   <div class="card-title">Is the World Order COLLAPSING? 🚨</div>
   <div class="card-footer">
     <a href="https://www.youtube.com/watch?v=V2ZvO7ZpGI0&list=PLdUYBT5_iJexrOtx5JIpqc_ZKkOWZ2CnM&index=2" target="_blank">Watch →</a>
@@ -545,13 +554,13 @@
 
 <!-- Episode 9 -->
 <article class="card">
-  <div class="card-tag">Episode 1</div>
+  <img class="card-thumb" src="https://img.youtube.com/vi/V2ZvO7ZpGI0/hqdefault.jpg">
+  <div class="card-tag">Episode 9</div>
   <div class="card-title">Is the UK FINISHED?! 🤯</div>
   <div class="card-footer">
     <a href="https://www.youtube.com/watch?v=V2ZvO7ZpGI0&list=PLdUYBT5_iJexrOtx5JIpqc_ZKkOWZ2CnM&index=1" target="_blank">Watch →</a>
   </div>
 </article>
-
 
 
     <!-- ====== RIGHT COLUMN (SIDEBAR) ====== -->
