--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
               Weekly essays on free speech, culture wars, economics, and the ideas shaping young people today.
             </p>
             <div class="card-footer">
-              <a href="https://substack.com/@samikshasstateofthedebate" target="_blank" rel="noopener noreferrer">
+              <a href="https://stateofthedebate.substack.com/t/weekly-articles" target="_blank" rel="noopener noreferrer">
                 Read the latest weekly article →
               </a>
             </div>
