--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         "bookFormat": "https://schema.org/EBook",
         "inLanguage": "en",
         "description": "A YA thriller exploring peer pressure, family, friendship, and identity.",
-        "publisher": "Independent",
+        "publisher": "The Conrad Press",
         "genre": [
           "Young Adult",
           "Thriller"
