--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
         "https://www.goodreads.com/author/show/21250460.Samiksha_Bhattacharjee",
         "https://www.amazon.co.uk/stores/author/Samiksha-Bhattacharjee",
         "https://www.joinvy.org/talent/samiksha-bhattacharjee",
-        "https://www.instagram.com/samikshasstateoftheday",
-        "https://www.youtube.com/@SamikshasStateoftheDay",
-        "https://substack.com/@samikshasstateoftheday"
+        "https://www.instagram.com/samikshasstateofthedebate/",
+        "https://www.youtube.com/@SamikshasStateoftheDebate",
+        "https://substack.com/@samikshasstateofthedebate"
       ],
 
-      "authorOf": {
+      "author": {
         "@id": "https://samikshabhattacharjee.github.io/#legalcrime"
       }
     },
