--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Samiksha Bhattacharjee</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="FC5nDbL8vv-ZD60BAmU3uRIoONtvhXSd3kkkyMqmzaA" />
 
   <!-- ====== JSON-LD SCHEMA ====== -->
 <script type="application/ld+json">
