--- a/index.html
+++ b/index.html
@@ -385,25 +385,57 @@
         </div>
       </div>
 
-      <!-- Weekly Articles (Substack) -->
-      <div class="section">
-        <h3 class="section-title">Weekly Articles</h3>
-        <div class="grid">
-          <!-- You can duplicate/adjust these cards as you like -->
-          <article class="card">
-            <div class="card-tag">Substack</div>
-            <div class="card-title">Samiksha's State of the Debate</div>
-            <p class="card-meta">
-              Weekly essays on free speech, culture wars, economics, and the ideas shaping young people today.
-            </p>
-            <div class="card-footer">
-              <a href="https://stateofthedebate.substack.com/t/weekly-articles" target="_blank" rel="noopener noreferrer">
-                Read the latest weekly article →
-              </a>
-            </div>
-          </article>
-        </div>
+     <!-- Substack Section -->
+<div class="section">
+  <h3 class="section-title">Substack</h3>
+
+  <div class="grid">
+
+    <!-- Weekly Articles -->
+    <article class="card">
+      <div class="card-tag">Substack</div>
+      <div class="card-title">Weekly Articles</div>
+      <p class="card-meta">
+        Essays on free speech, culture wars, economics, and the ideas shaping young people today.
+      </p>
+      <div class="card-footer">
+        <a href="https://stateofthedebate.substack.com/t/weekly-articles" target="_blank" rel="noopener noreferrer">
+          Read the latest →
+        </a>
       </div>
+    </article>
+
+    <!-- State of the Inbox -->
+    <article class="card">
+      <div class="card-tag">Substack</div>
+      <div class="card-title">State of the Inbox</div>
+      <p class="card-meta">
+        A behind‑the‑scenes look at the debates, ideas, and cultural battles shaping the week.
+      </p>
+      <div class="card-footer">
+        <a href="https://stateofthedebate.substack.com/t/stateoftheinbox" target="_blank" rel="noopener noreferrer">
+          Read the latest →
+        </a>
+      </div>
+    </article>
+
+    <!-- Paid Subscription Offer -->
+    <article class="card">
+      <div class="card-tag">Offer</div>
+      <div class="card-title">Get 10% Off</div>
+      <p class="card-meta">
+        Since you're on my website, enjoy a special 10% discount on a paid subscription.
+      </p>
+      <div class="card-footer">
+        <a href="https://stateofthedebate.substack.com/websiteoffer" target="_blank" rel="noopener noreferrer">
+          Claim your discount →
+        </a>
+      </div>
+    </article>
+
+  </div>
+</div>
+
 
       <!-- External Articles -->
       <div class="section">
