--- a/index.html
+++ b/index.html
@@ -493,10 +493,11 @@
         <ul class="sidebar-list">
           <li><a href="https://www.goodreads.com/author/show/21266746.Samiksha_Bhattacharjee" target="_blank" rel="noopener noreferrer">Goodreads</a></li>
           <li><a href="https://www.amazon.co.uk/stores/author/B08WPPW247" target="_blank" rel="noopener noreferrer">Amazon Author Page</a></li>
-          <li><a href="https://www.joinyv.org/talent/samiksha-bhattacharjee" target="_blank" rel="noopener noreferrer">Join YV</a></li>
+          <li><a href="https://www.joinyv.org/talent/samiksha-bhattacharjee" target="_blank" rel="noopener noreferrer">Young Voices</a></li>
           <li><a href="https://substack.com/@samikshasstateofthedebate" target="_blank" rel="noopener noreferrer">Substack</a></li>
           <li><a href="https://www.youtube.com/@SamikshasStateoftheDebate" target="_blank" rel="noopener noreferrer">YouTube Channel</a></li>
           <li><a href="https://www.instagram.com/samikshasstateofthedebate/" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+          <li><a href="https://chat.whatsapp.com/FgUr4ZMhYAgEyIte4b8Y43" target="_blank" rel="noopener noreferrer">WhatsApp Community</a></li>
         </ul>
       </div>
 
