--- a/index.html
+++ b/index.html
@@ -524,6 +524,8 @@
     </aside>
   </main>
 
+  <iframe src="https://stateofthedebate.substack.com/embed" width="480" height="320" style="border:1px solid #EEE; background:white;" frameborder="0" scrolling="no"></iframe>
+
   <!-- ====== FOOTER ====== -->
   <footer class="footer">
     <div>© <span id="year"></span> Samiksha Bhattacharjee. All rights reserved.</div>
