--- a/index.html
+++ b/index.html
@@ -317,6 +317,38 @@
       margin-right: 0.75rem;
       font-weight: 500;
     }
+
+/* ====== CARD ANIMATIONS ====== */
+
+/* Fade-in on load */
+.card {
+  opacity: 0;
+  animation: fadeIn 0.8s ease forwards;
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Lift + shadow on hover */
+.card:hover {
+  transform: translateY(-6px) scale(1.02);
+  box-shadow: 0 12px 24px rgba(0,0,0,0.12);
+}
+
+/* Optional staggered fade-in */
+.card:nth-child(1) { animation-delay: 0.1s; }
+.card:nth-child(2) { animation-delay: 0.25s; }
+.card:nth-child(3) { animation-delay: 0.4s; }
+
   </style>
 </head>
 
