--- a/index.html
+++ b/index.html
@@ -416,6 +416,22 @@ body {
   opacity: 1;
   transform: translateY(0);
 }
+    /* ====== BUY BUTTON ====== */
+.buy-button {
+  padding: 12px 20px;
+  background: #c62828;
+  color: #fff;
+  border-radius: 6px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: 0.2s ease;
+  display: inline-block;
+  margin-top: 0.5rem;
+}
+
+.buy-button:hover {
+  background: #a31f1f;
+}
 
 
   </style>
@@ -488,6 +504,26 @@ body {
         </a>
       </div>
     </article>
+  </div>
+</div>
+<!-- Signed Copies Section -->
+<div class="section">
+  <h3 class="section-title animate-on-scroll">Signed Copies</h3>
+
+  <div class="card animate-on-scroll">
+    <div class="card-tag">Signed Edition</div>
+    <div class="card-title">Legal Crime — Signed Copy</div>
+
+    <p class="card-meta">
+      Get a personally signed copy of <strong>Legal Crime</strong> with an optional personalised message.
+      Buying directly supports the author.
+    </p>
+
+    <a href="https://buy.stripe.com/cNicN5d5J4pfbgD6KQ8so00" 
+       class="buy-button" 
+       style="margin-top:0.5rem; display:inline-block;">
+      Buy Signed Copy — £12.99
+    </a>
   </div>
 </div>
 
