--- a/index.html
+++ b/index.html
@@ -504,28 +504,30 @@ body {
         </a>
       </div>
     </article>
-  </div>
-</div>
-<!-- Signed Copies Section -->
-<div class="section">
-  <h3 class="section-title animate-on-scroll">Signed Copies</h3>
+    <article class="card animate-on-scroll">
+  <div class="card-tag">Signed Edition</div>
+  <div class="card-title">Legal Crime — Signed Copy</div>
 
-  <div class="card animate-on-scroll">
-    <div class="card-tag">Signed Edition</div>
-    <div class="card-title">Legal Crime — Signed Copy</div>
+  <img src="images/legal-crime.png" 
+       alt="Signed copy of Legal Crime" 
+       style="width:100%; border-radius:6px; margin:0.5rem 0;">
 
-    <p class="card-meta">
-      Get a personally signed copy of <strong>Legal Crime</strong> with an optional personalised message.
-      Buying directly supports the author.
-    </p>
+  <p class="card-meta">
+    A signed physical copy of <strong>Legal Crime</strong>, with an optional personalised message.
+    Buying directly supports the author.
+  </p>
 
+  <div class="card-footer">
     <a href="https://buy.stripe.com/cNicN5d5J4pfbgD6KQ8so00" 
-       class="buy-button" 
-       style="margin-top:0.5rem; display:inline-block;">
-      Buy Signed Copy — £12.99
+       class="buy-button">
+      Buy Signed Copy — £12.99 →
     </a>
   </div>
+</article>
+
+  </div>
 </div>
+
 
 
      <!-- Substack Section -->
