--- a/index.html
+++ b/index.html
@@ -432,6 +432,18 @@ body {
 .buy-button:hover {
   background: #a31f1f;
 }
+.support-badge {
+  display: inline-block;
+  background: var(--accent-soft);
+  color: var(--accent);
+  padding: 4px 10px;
+  border-radius: 999px;
+  font-size: 0.75rem;
+  font-weight: 600;
+  letter-spacing: 0.05em;
+  margin-bottom: 0.4rem;
+  text-transform: uppercase;
+}
 
 
   </style>
@@ -483,29 +495,11 @@ body {
 
    <!-- Books / Legal Crime -->
 <div class="section">
-  <h3 class="section-title animate-on-scroll">Books</h3>
-  <div class="grid">
-    <article class="card animate-on-scroll">
-      <div class="card-tag">Book</div>
-      <div class="card-title">Legal Crime</div>
-
-      <img src="images/legal-crime.png" 
-           alt="Legal Crime by Samiksha Bhattacharjee" 
-           style="width:100%; border-radius:6px; margin:0.5rem 0;">
-
-      <p class="card-meta">
-        A gripping YA thriller about identity, peer pressure, and the cost of reinvention.
-      </p>
-
-      <div class="card-footer">
-        <a href="https://www.amazon.co.uk/Legal-Crime-Samiksha-Bhattacharjee-ebook/dp/B08WPNS119" 
-           target="_blank" rel="noopener noreferrer">
-          Read on Amazon →
-        </a>
-      </div>
-    </article>
     <article class="card animate-on-scroll">
   <div class="card-tag">Signed Edition</div>
+
+  <div class="support-badge">Support the Author</div>
+
   <div class="card-title">Legal Crime — Signed Copy</div>
 
   <img src="images/legal-crime.png" 
